--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@prisma/client": "^5.16.2",
     "@types/express": "^4.17.21",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.16.2",
     "typescript": "^5.5.3"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6"
   }
 }
