--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc -b",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.614.0",
+    "@aws-sdk/s3-presigned-post": "^3.614.0",
+    "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@prisma/client": "^5.16.2",
     "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
