--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "@aws-sdk/s3-presigned-post": "^3.614.0",
     "@aws-sdk/s3-request-presigner": "^3.614.0",
     "@prisma/client": "^5.16.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
